app/styles/styles.css
/* main */

html, body, #container, #containter > div, [data-reactroot] {
  width: 100%;
  height: 100%;
  background-color: ghostwhite;
  margin: 0;
  padding: 0;
}

/* header */

.dashHeader {
  height: 8%;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  background: grey; /* For browsers that do not support gradients */
  background: -webkit-linear-gradient(left, dimgrey, lightgrey); /* For Safari 5.1 to 6.0 */
  background: -o-linear-gradient(right, dimgrey, lightgrey); /* For Opera 11.1 to 12.0 */
  background: -moz-linear-gradient(right, dimgrey, lightgrey); /* For Firefox 3.6 to 15 */
  background: linear-gradient(to right, dimgrey, lightgrey); /* Standard syntax */
  opacity: 0.8;
}

.boxShadow {
  width: 96%;
  height: 100%;
  float: right;
  box-shadow: 5px 5px 10px silver;
}

.searchForm {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  padding-right: 15px;
}

.searchInput {
  display: block;
  margin: 0;
  width: 30%;
  height: 18px;
  font-family: sans-serif;
  font-size: 18px;
  appearance: none;
  box-shadow: none;
  border-radius: 3px;
  margin: 10px;
  padding: 10px;
  border: solid 2px #dcdcdc;
  transition: box-shadow 0.3s, border 0.3s;
}
.searchInput:focus {
  outline: none;
  border: solid 1px silver;
  box-shadow: 0 0 5px 3px grey;
}
.searchInput, textarea {
  background-color : ghostwhite;
  opacity: 0.8;
  color: dimgrey;
  font-size: 18px;
}

.searchButton {
  color: silver;
  font-size: 18px;
  text-align: center;
  background-color: grey;
  opacity: 0.8;
  padding: 8px 30px 8px 30px;
  border: solid 1px ghostwhite;
  border-radius: 3px;
  transition: color: 0.3s, box-shadow: 0.3s, broder: 0.3s;
}

.searchButton:hover {
  color: black;
  border: solid 1px grey;
  box-shadow: 0 0 6px ghostwhite, 0 0 10px ghostwhite;
  cursor: pointer;
}

.searchButton:focus {
  background-image: none;
  outline: 0;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.searchButton:active {
  box-shadow: 0 0 5px 1px ghostwhite;
}

/* footer */

.dashFooter {
  height: 100%;
  width: 4%;
  top: 0;
  left: 0;
  bottom: 0;
  background: grey; /* For browsers that do not support gradients */
  background: -webkit-linear-gradient(dimgrey, lightgrey);
  background: -o-linear-gradient(dimgrey, lightgrey);
  background: -moz-linear-gradient(dimgrey, lightgrey);
  background: linear-gradient(dimgrey, lightgrey);
  opacity: 0.8;
  box-shadow: 5px 5px 10px silver;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.menuButtons {
  height: 30px;
  width: 30px;
  margin-top: 10px;
  margin-bottom: 10px;
  transition: all .07s ease;
}

.menuButtons:hover {
  transform: scale(1.1);
  cursor: pointer;
}

